# Django

Chapter_02/config/: settings.py  urls.py
Chapter_02/todo/migrations/: 0001_initial.py
Todo_task/: .gitignore  db.sqlite3  pyproject.toml
Todo_task/.config_secret/: secret.json
Todo_task/config/: settings.py  urls.py
Todo_task/templates/: 404.html  bace.html  base.html  todo_create.html  todo_home.html  todo_info.html  todo_list.html  todo_update.html
Todo_task/templates/registration/: login.html  signup.html  signup_success.html  verify_failed.html  verify_success.html
Todo_task/templates/todo/: base.html  pagination.html  todo_create.html  todo_home.html  todo_info.html  todo_list.html  todo_update.html
Todo_task/todo/: admin.py  cb_views.py  form.py  models.py  urls.py  views.py
Todo_task/todo/migrations/: 0001_initial.py  0002_comment.py  0002_todo_user_alter_todo_end_date_alter_todo_start_date.py  0003_todo_thumbnail.py
Todo_task/users/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
Todo_task/users/migrations/: 0001_initial.py
Todo_task/utils/: email.py
blog_task/: db.sqlite3  manage.py  pyproject.toml
blog_task/blog/: admin.py  forms.py  models.py  views.py
blog_task/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py
blog_task/config/: settings.py  urls.py
blog_task/member/: views.py
blog_task/templates/: base.html  blog_create.html  blog_detail.html  blog_list.html  blog_update.html
blog_task/templates/registration/: login.html  signup.html
chapter_01/: pyproject.toml
